# qrun

./: .gitignore  README.md
scripts/: original-run.sh
src/: CMakeLists.txt  main.cpp
